--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         </div>
     </header>
     <section class="banner">
-        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        <h2 class="banner__titulo">Colégio Jayme Cannet!</h2>
+        <p class="banner__texto">"O diferencial quem faz é você"</p>
+        <input type="search" class="banner__pesquisa" placeholder="Qual será o seu itinerário formativo?">
     </section>
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Novos lançamentos</h2>
+        <h2 class="carrossel__titulo">Novas jovens protagonistas das "Mídias Sociais"</h2>
         <!-- Slider main container -->
         <div class="carrossel__container">
             <div class="swiper">
